fix: hydration error

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <!--app-html-->
-  </div>
+  <div id="app"><!--app-html--></div>
   <script type="module" src="/src/entry-client.ts"></script>
 </body>
 
